--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A cross compiler for bibtex and bibjson file formats. Convert BibTex documents to BibJson.",
   "main": "dist/bibtex-bibjson.js",
   "scripts": {
-    "build": "pegjs -o src/bibtex.ts src/bibtex.pegjs && webpack --config webpack.prod.js",
+    "build": "pegjs -o src/bibtex.ts src/bibtex.pegjs && ts-node webpack.ts",
     "pretest": "tsc",
     "test": "ava tests/markademic.spec.js",
     "coverage": "nyc npm test && nyc report --reporter=lcov && codecov",
@@ -28,18 +28,16 @@
   },
   "homepage": "https://github.com/alaingalvan/bibtex2bibjson#readme",
   "devDependencies": {
-    "@types/node": "^12.0.x",
-    "ava": "^2.1.x",
+    "@types/node": "^14.14.x",
+    "ava": "^3.15.x",
     "clean-webpack-plugin": "^3.0.0",
-    "codecov": "^3.5.x",
-    "coveralls": "^3.0.x",
-    "nyc": "^14.1.x",
+    "codecov": "^3.8.x",
+    "coveralls": "^3.1.x",
+    "nyc": "^15.1.x",
     "pegjs": "^0.10.0",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.35.2",
-    "webpack-command": "^0.4.2",
-    "webpack-merge": "^4.2.1"
+    "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
+    "webpack": "^5.24.3"
   }
 }
