--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "bibtex-bibjson",
-  "version": "0.1.0",
-  "description": "A cross compiler for bibtex and bibjson file formats. Convert BibTex documents to BibJson.",
+  "version": "0.1.1",
+  "description": "📚 A tool to convert BibTeX documents to BibJSON.",
   "main": "dist/bibtex-bibjson.js",
+  "browser": "dist/bibtex-bibjson.browser.js",
   "typings": "bibtex-bibjson.d.ts",
   "types": "bibtex-bibjson.d.ts",
   "scripts": {
@@ -39,7 +40,6 @@
   "devDependencies": {
     "@types/node": "^14.14.x",
     "ava": "^3.15.x",
-    "clean-webpack-plugin": "^3.0.0",
     "codecov": "^3.8.x",
     "coveralls": "^3.1.x",
     "cross-env": "^7.0.3",
