--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,14 +15,14 @@
         "dom"
       ],
       "module": "commonjs",
-      "declaration": false,
+      "declaration": true,
       "noImplicitAny": false,
       "suppressImplicitAnyIndexErrors": true,
       "removeComments": false,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "noEmitHelpers": false,
-      "sourceMap": true,
+      "sourceMap": false,
       "strictNullChecks": false,
       "jsx": "react",
       "esModuleInterop": true,
